2011-12-12  Torvald Riegel  <triegel@redhat.com>

	* semantics.c (finish_transaction_stmt, build_transaction_expr):
	Accept new noexcept parameter and handle it.
	* cp-tree.h (finish_transaction_stmt, build_transaction_expr): Adapt
	declarations.
	* parser.c (cp_parser_exception_specification_opt): Extract
	noexcept-specification parsing to ...
	(cp_parser_noexcept_specification_opt): ...here.  Allow for parsing
	non-constexpr noexcept arguments.
	(cp_parser_transaction, cp_parser_transaction_expression): Parse
    and handle noexcept-specifications.
	(cp_parser_function_transaction): Adapt to finish_transaction_stmt
	change.
	* pt.c (tsubst_expr): Adapt to new noexcept parameters when
	building transactions.

2011-12-12  Torvald Riegel  <triegel@redhat.com>

	* cp-tree.def (MUST_NOT_THROW_EXPR): Add condition parameter.
	* cp-tree.h (MUST_NOT_THROW_COND): New.
	(build_must_not_throw_expr): Declare.
	* dump.c (cp_dump_tree): Dump MUST_NOT_THROW_EXPR condition.
	* except.c (build_must_not_throw_expr): New.
	(initialize_handler_parm): Use it.
	(begin_eh_spec_block, wrap_cleanups_r): Adapt to condition.
	* pt.c (tsubst_expr): Handle MUST_NOT_THROW_EXPR.

2011-12-12  Richard Guenther  <rguenther@suse.de>

	PR lto/51262
	* tree.c (cp_free_lang_data): No longer clear anonymous names.

2011-12-09  Jason Merrill  <jason@redhat.com>

	PR c++/51151
	* call.c (perform_implicit_conversion_flags): Remove earlier kludge.
	* parser.c (cp_parser_omp_for_loop): Use cp_parser_omp_for_incr
	in templates even if decl isn't type-dependent.

2011-12-09  Dodji Seketeli  <dodji@redhat.com>

	PR c++/51289
	* cp-tree.h (TYPE_TEMPLATE_INFO): Rewrite this accessor macro to
	better support aliased types.
	(TYPE_ALIAS_P): Don't crash on TYPE_NAME nodes that are not
	TYPE_DECL.
	* pt.c (find_parameter_packs_r): Handle types aliases.
	(push_template_decl_real): Check for bare parameter packs in the
	underlying type of an alias template.

2011-12-08  Jason Merrill  <jason@redhat.com>
