@@ -26354,11 +26354,11 @@ cp_parser_omp_for_loop (cp_parser *parser, tree clauses, tree *par_clauses)
 	{
 	  /* If decl is an iterator, preserve the operator on decl
 	     until finish_omp_for.  */
-	  if (decl
+	  if (real_decl
 	      && ((processing_template_decl
-		   && !POINTER_TYPE_P (TREE_TYPE (decl)))
-		  || CLASS_TYPE_P (TREE_TYPE (decl))))
-	    incr = cp_parser_omp_for_incr (parser, decl);
+		   && !POINTER_TYPE_P (TREE_TYPE (real_decl)))
+		  || CLASS_TYPE_P (TREE_TYPE (real_decl))))
+	    incr = cp_parser_omp_for_incr (parser, real_decl);
 	  else
 	    incr = cp_parser_expression (parser, false, NULL);
 	}
